--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,7 @@
             </div>
             <h1 class="app-title">عقار</h1>
             <div class="app-header-action">
-                <!-- Replace search toggle with direct link to search page -->
-                <a href="search.html" aria-label="بحث">
-                    <i class="fas fa-search"></i>
-                </a>
+                <!-- Search icon removed -->
             </div>
         </header>
 
