--- a/public/explore-locations.html
+++ b/public/explore-locations.html
@@ -121,7 +121,7 @@
         </div>
     </div>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzluJAdmR0E6C6S4fu7MH9eL7JFtxr9wo&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzluJAdmR0E6C6S4fu7MH9eL7JFtxr9wo&v=weekly&callback=initMap&loading=async"></script>
     <script type="module" src="js/explore-locations.js"></script>
 </body>
 </html>
